--- a/securecoding/src/main/resources/templates/fragments/nav.html
+++ b/securecoding/src/main/resources/templates/fragments/nav.html
@@ -72,7 +72,7 @@
               <li><a class="dropdown-item" th:href="@{/5/2}">2. 부적절한 자원 해제</a></li>
               <li><a class="dropdown-item" th:href="@{/5/3}">3. 해제된 자원 사용</a></li>
               <li><a class="dropdown-item" th:href="@{/5/4}">4. 초기화되지 않은 변수 사용</a></li>
-              <li><a class="dropdown-item" href="#!">5. 신뢰할 수 없는 데이터의 역직렬화</a></li>
+              <li><a class="dropdown-item" th:href="@{/5/5}">5. 신뢰할 수 없는 데이터의 역직렬화</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
