--- a/securecoding/src/main/resources/templates/1/1.6.html
+++ b/securecoding/src/main/resources/templates/1/1.6.html
@@ -28,12 +28,17 @@
             <label th:for="content" style="margin-top: 3%; margin-bottom: 2%; color: #2E2E2E">내용</label>
             <textarea th:field="*{content}" class="area" style="height: 250px; margin-bottom: 2%; border-color: #D8D8D8; background-color: #FFF"/>
           </div>
-            <input type="file" id="file" >
-<!--          <div class="filebox">-->
-<!--            <input class="upload-name" value="첨부파일" placeholder="첨부파일" style="margin-bottom: 2%">-->
-<!--            <label th:for="fileName" style="margin-bottom: 2%; color: #2E2E2E; text-align: center;">파일 찾기</label><br />-->
-<!--            <input id="fileName" type="file" style="margin-bottom: 2%; margin-top: 2%; float: left"/>-->
-<!--          </div>-->
+          <div class="filebox">
+            <input class="upload-name" value="첨부파일" placeholder="첨부파일" style="margin-bottom: 2%">
+            <label th:for="file" style="margin-bottom: 2%; color: #2E2E2E; text-align: center;">파일 찾기</label><br />
+            <input id="file" name="file" type="file" style="margin-bottom: 2%; float: left"/>
+            <script>
+            $("#file").on('change',function(){
+                var fileName = $("#file").val();
+                $(".upload-name").val(fileName);
+            });
+            </script>
+          </div>
           <button type="submit" class="btn" style="background-color: #ffe74a; width: 100%; height: 50px">등록</button>
           <br />
           <br />
@@ -54,12 +59,17 @@
                 <label th:for="content" style="margin-top: 3%; margin-bottom: 2%; color: #2E2E2E">내용</label>
                 <textarea th:field="*{content}" class="area" style="height: 250px; margin-bottom: 2%; border-color: #D8D8D8; background-color: #FFF"/>
             </div>
-            <input type="file" id="file2">
-<!--            <div class="filebox">-->
-<!--                <input class="upload-name" value="첨부파일" placeholder="첨부파일" style="margin-bottom: 2%;">-->
-<!--                <label th:for="fileName2" style="margin-bottom: 2%; color: #2E2E2E">파일 찾기</label><br />-->
-<!--                <input id="fileName2" type="file" style="margin-bottom: 2%; float: left;"/>-->
-<!--            </div>-->
+            <div class="filebox">
+                <input class="upload-name" value="첨부파일" placeholder="첨부파일" style="margin-bottom: 2%;">
+                <label th:for="file2" style="margin-bottom: 2%; color: #2E2E2E">파일 찾기</label><br />
+                <input id="file2" name="file2" type="file" style="margin-bottom: 2%; float: left;"/>
+            </div>
+            <script>
+            $("#file2").on('change',function(){
+                var fileName = $("#file2").val();
+                $(".upload-name").val(fileName);
+            });
+            </script>
             <button type="submit" class="btn" style="background-color: #ffe74a; width: 100%; height: 50px">등록</button>
             <br />
             <br />
