--- a/securecoding/src/main/resources/templates/1/1.6.html
+++ b/securecoding/src/main/resources/templates/1/1.6.html
@@ -62,7 +62,7 @@
             <div class="filebox">
                 <input class="upload-name" value="첨부파일" placeholder="첨부파일" style="margin-bottom: 2%;">
                 <label th:for="file2" style="margin-bottom: 2%; color: #2E2E2E">파일 찾기</label><br />
-                <input id="file2" name="file2" type="file" style="margin-bottom: 2%; float: left;"/>
+                <input id="file2" name="file" type="file" style="margin-bottom: 2%; float: left;"/>
             </div>
             <script>
             $("#file2").on('change',function(){
