--- a/securecoding/src/main/resources/templates/fragments/nav.html
+++ b/securecoding/src/main/resources/templates/fragments/nav.html
@@ -10,7 +10,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" id="navbarDropdown2" style="font-weight: 500" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">제1절 입력데이터 검증 및 표현</a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" th:href="@{/1/1}">1. SQL 삽입</a></li>
+              <li><a class="dropdown-item" th:href="@{/board}">1. SQL 삽입</a></li>
               <li><a class="dropdown-item" th:href="@{/1/2}">2. 코드 삽입</a></li>
               <li><a class="dropdown-item" th:href="@{/1/3}">3. 경로 조작 및 자원 삽입</a></li>
               <li><a class="dropdown-item" th:href="@{/1/4}">4. 크로스사이트 스크립트</a></li>
