--- a/securecoding/src/main/resources/templates/board/getBoardFrom_secure.html
+++ b/securecoding/src/main/resources/templates/board/getBoardFrom_secure.html
@@ -25,13 +25,13 @@
         </div>
 
         <div th:if="${form.member.id != session.memberInfo.id}">
-            <a href="#" th:href="@{/boards}" class="btn" style="background-color: #ffe74a;" role="button">목록</a>
+            <a th:href="@{/boards}" class="btn" style="background-color: #ffe74a;" role="button">목록</a>
         </div>
 
         <div th:if="${form.member.id == session.memberInfo.id}">
-            <a href="#" th:href="@{/board}" class="btn" style="background-color: #F5Df4D;" role="button">목록</a>
-            <a href="#" th:href="@{/board/update/{id} (id=${boardId})}" class="btn" style="background-color: #ffe74a;" role="button">수정</a>
-            <a href="#" th:href="@{/board/delete/{id} (id=${boardId})}" class="btn" style="background-color: #ffe74a;" role="button">삭제</a>
+            <a th:href="@{/board}" class="btn" style="background-color: #F5Df4D;" role="button">목록</a>
+            <a th:href="@{/board/update/{id} (id=${boardId})}" class="btn" style="background-color: #ffe74a;" role="button">수정</a>
+            <a th:href="@{/board/delete/{id} (id=${boardId})}" class="btn" style="background-color: #ffe74a;" role="button">삭제</a>
         </div>
 
         <br/> <br/>
