--- a/securecoding/src/main/resources/templates/board/getBoardForm_vuln.html
+++ b/securecoding/src/main/resources/templates/board/getBoardForm_vuln.html
@@ -13,11 +13,11 @@
     <form th:object="${form}">
         <div class="form-group">
             <label th:for="subject">제목</label>
-            <span th:text="*{subject}" class="form-control"/>
+            <span th:utext="*{subject}" class="form-control"/>
         </div>
         <div class="form-group">
             <label th:for="content">내용</label>
-            <p th:text="*{content}" class="form-control" style="height:350px"/>
+            <p th:utext="*{content}" class="form-control" style="height:350px"/>
         </div>
 
         <div class="form-group">
