--- a/securecoding/src/main/resources/templates/board/getBoardForm_vuln.html
+++ b/securecoding/src/main/resources/templates/board/getBoardForm_vuln.html
@@ -9,8 +9,7 @@
 <!-- Header-->
 <head th:replace="fragments/header :: header"></head>
 <div class="container">
-    <div th:replace="fragments/bodyHeader :: bodyHeader"/>
-    <form th:object="${form}">
+    <form th:object="${form}" style="width: 60%; margin-top: 3%">
         <div class="form-group">
             <label th:for="subject">제목</label>
             <span th:utext="*{subject}" class="form-control"/>
@@ -22,7 +21,7 @@
 
         <div class="form-group">
             <label th:for="fileName">파일</label>
-            <a th:text="*{fileName}" th:href="|/download/${form.id}|" class="form-control" style="color:black"/>
+            <a th:text="*{fileName}" th:href="|/download/${form.id}|" class="form-control" style="color:black; margin-bottom: 3%"/>
         </div>
 
         <div th:if="${form.member.id != session.memberInfo.id}">
@@ -41,7 +40,6 @@
 
 
     <br/>
-    <!--    <div th:replace="fragments/footer :: footer" />-->
 </div> <!-- /container -->
 <!-- Footer-->
 <footer th:replace="fragments/footer :: footer"></footer>
