--- a/securecoding/src/main/resources/templates/board/getBoardForm_vuln.html
+++ b/securecoding/src/main/resources/templates/board/getBoardForm_vuln.html
@@ -8,19 +8,20 @@
 <nav th:replace="fragments/nav :: nav"></nav>
 <!-- Header-->
 <head th:replace="fragments/header :: header"></head>
-<div class="container">
-    <form th:object="${form}" style="width: 60%; margin-top: 3%">
-        <div class="form-group">
-            <label th:for="subject">제목</label>
+<div class="container" style="width: 50%; margin: 0 auto">
+    <h6 style="font-weight: 500; text-align: center; margin-top: 5%">게시글 상세보기</h6>
+    <form th:object="${form}" style="margin-top: 5%">
+        <div class="form-group" style="margin-bottom: 2%">
+            <label th:for="subject" style="margin-bottom: 2%">제목</label>
             <span th:utext="*{subject}" class="form-control"/>
         </div>
-        <div class="form-group">
-            <label th:for="content">내용</label>
+        <div class="form-group" style="margin-bottom: 2%">
+            <label th:for="content" style="margin-bottom: 2%">내용</label>
             <p th:utext="*{content}" class="form-control" style="height:350px"/>
         </div>
 
-        <div class="form-group">
-            <label th:for="fileName">파일</label>
+        <div class="form-group" style="margin-bottom: 2%">
+            <label th:for="fileName" style="margin-bottom: 2%">파일</label>
             <a th:text="*{fileName}" th:href="|/download/${form.id}|" class="form-control" style="color:black; margin-bottom: 3%"/>
         </div>
 
@@ -30,8 +31,8 @@
 
         <div th:if="${form.member.id == session.memberInfo.id}">
             <a th:href="@{/board}" class="btn" style="background-color: #F5Df4D;" role="button">목록</a>
-            <a th:href="@{/board/update/{id} (id=${boardId})}" class="btn" style="background-color: #ffe74a;" role="button">수정</a>
-            <a th:href="@{/board/delete/{id} (id=${boardId})}" class="btn" style="background-color: #ffe74a;" role="button">삭제</a>
+            <a th:href="@{/board/update/{id}/vuln (id=${boardId})}" class="btn" style="background-color: #ffe74a;" role="button">수정</a>
+            <a th:href="@{/board/delete/{id}/vuln (id=${boardId})}" class="btn" style="background-color: #ffe74a;" role="button">삭제</a>
         </div>
 
         <br/> <br/>
