--- a/securecoding/src/main/resources/templates/board/getBoardForm_secure.html
+++ b/securecoding/src/main/resources/templates/board/getBoardForm_secure.html
@@ -8,8 +8,9 @@
 <nav th:replace="fragments/nav :: nav"></nav>
 <!-- Header-->
 <head th:replace="fragments/header :: header"></head>
-<div class="container">
-    <form th:object="${form}">
+<div class="container" style="width: 50%; margin: 0 auto">
+    <h5 style="font-weight: 500; text-align: center; margin-top: 5%">게시글 상세보기</h5>
+    <form th:object="${form}" style="margin-top: 5%">
         <div class="form-group">
             <label th:for="subject">제목</label>
             <span th:text="*{subject}" class="form-control"/>
@@ -29,8 +30,8 @@
 
         <div th:if="${form.member.id == session.memberInfo.id}">
             <a th:href="@{/board}" class="btn" style="background-color: #F5Df4D;" role="button">목록</a>
-            <a th:href="@{/board/update/{id} (id=${boardId})}" class="btn" style="background-color: #ffe74a;" role="button">수정</a>
-            <a th:href="@{/board/delete/{id} (id=${boardId})}" class="btn" style="background-color: #ffe74a;" role="button">삭제</a>
+            <a th:href="@{/board/update/{id}/secure (id=${boardId})}" class="btn" style="background-color: #ffe74a;" role="button">수정</a>
+            <a th:href="@{/board/delete/{id}/secure (id=${boardId})}" class="btn" style="background-color: #ffe74a;" role="button">삭제</a>
         </div>
 
         <br/> <br/>
