--- a/securecoding/src/main/resources/templates/1/1.14.code.html
+++ b/securecoding/src/main/resources/templates/1/1.14.code.html
@@ -11,7 +11,7 @@
 <section class="py-5">
   <div class="container px-4 px-lg-5 mt-5">
     <h4 class="fw-bolder" style="text-align: center">14. 정수형 오버플로우</h4>
-    <p style="text-align: center">제1절 보안기능</p>
+    <p style="text-align: center">제1절 입력데이터 검증 및 표현</p>
     <br />
     <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
       <div class="col mb-5" style="width: 60%">
