--- a/securecoding/src/main/resources/templates/board/getBoardForm_vuln.html
+++ b/securecoding/src/main/resources/templates/board/getBoardForm_vuln.html
@@ -9,7 +9,7 @@
 <!-- Header-->
 <head th:replace="fragments/header :: header"></head>
 <div class="container" style="width: 50%; margin: 0 auto">
-    <h6 style="font-weight: 500; text-align: center; margin-top: 5%">게시글 상세보기</h6>
+    <h5 style="font-weight: 500; text-align: center; margin-top: 5%">게시글 상세보기</h5>
     <form th:object="${form}" style="margin-top: 5%">
         <div class="form-group" style="margin-bottom: 2%">
             <label th:for="subject" style="margin-bottom: 2%">제목</label>
@@ -30,7 +30,7 @@
         </div>
 
         <div th:if="${form.member.id == session.memberInfo.id}">
-            <a th:href="@{/board}" class="btn" style="background-color: #F5Df4D;" role="button">목록</a>
+            <a th:href="@{/board}" class="btn" style="background-color: #ffe74a;" role="button">목록</a>
             <a th:href="@{/board/update/{id}/vuln (id=${boardId})}" class="btn" style="background-color: #ffe74a;" role="button">수정</a>
             <a th:href="@{/board/delete/{id}/vuln (id=${boardId})}" class="btn" style="background-color: #ffe74a;" role="button">삭제</a>
         </div>
